# Mordente

./: .gitignore  Dockerfile  LICENSE  README.md  SEAExtract  pixel.txt  pyproject.toml
logs/: raw.txt  xiaomi.txt
policies/simplePolicy1/: build.prop  plat_file_contexts  precompiled_sepolicy  simplePolicy1.cil
policies/simplePolicy2/: build.prop  plat_file_contexts  precompiled_sepolicy  simplePolicy2.cil
queries/: CMLformulas
src/selinuxtool/: __init__.py  main.py  perm_map  test-libmata.py  test.mata  test_lark.py  test_mata.py  test_re.py  tests.txt
src/selinuxtool/android/: file_contexts.py  graph.py  label.py  permmap.py  policy.py
src/selinuxtool/android-extract/: .gitignore  demo-extract  extract  pixel-extract  xiaomi-extract
src/selinuxtool/ifdif/: ast.py  ifdif.lark  parser.py  solver.py
src/selinuxtool/util/: common.py  draw.py  queries.txt
tests/: test_graph.py  test_parser.py  test_policy.py
