[project]
name = "selinuxtool"
version = "0.0.1"
dependencies = []

[project.scripts]
selinuxtool = "selinuxtool.main:main"

[dependency-groups]
lint = [
    "ruff == 0.11.9",
    "mypy == 1.15.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [
    ".venv",
    "setools"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
# exclude = [
#     "setools/.*"
# ]
disable_error_code = ["import-untyped"]

[build-system]
requires = ["setuptools >= 75.6.4"]
build-backend = "setuptools.build_meta"
